# CMakeCSharpRepro20210423

./: CMakeLists.txt  README.md
RelWithDebInfo/: test.cs
